v 0.0.3
-Переписан README.md
-Исправлена работа переменных окружения
- Миграции упакованы в docker
- Из конфига убран bd name и перенесен в env
- Добавлена группа api для маршрутизатора
- Изменены команды в makefile
